{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 171,
  "lineage": "e1950fc2-8f18-2776-ae16-e8cb6a97bc86",
  "resources": [
    {
      "module": "module.compute_module",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tf-dbnetint",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f9a92d15-34b7-4665-b1d1-39e1a39c1d15/resourceGroups/staging-grp/providers/Microsoft.Network/networkInterfaces/db-interface",
            "internal_domain_name_suffix": "wrkkj4pzvjmubclxz15lf3aj5d.hx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "dbipconf",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f9a92d15-34b7-4665-b1d1-39e1a39c1d15/resourceGroups/staging-grp/providers/Microsoft.Network/virtualNetworks/staging-network/subnets/db-subnet"
              }
            ],
            "location": "eastasia",
            "name": "db-interface",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "staging-grp"
          },
          "dependencies": [
            "module.compute_module.azurerm_public_ip.tf-dbpubip",
            "module.general_module.azurerm_resource_group.tf-resourcegrp",
            "module.networking_module.azurerm_bastion_host.tf-bashost",
            "module.networking_module.azurerm_network_security_group.tf-nwsecgrp",
            "module.networking_module.azurerm_network_security_rule.tf-netsecrule",
            "module.networking_module.azurerm_public_ip.tf-baspubip",
            "module.networking_module.azurerm_subnet.tf-bassub",
            "module.networking_module.azurerm_subnet.tf-sub",
            "module.networking_module.azurerm_subnet_network_security_group_association.tf-nwsecgrpass",
            "module.networking_module.azurerm_virtual_network.tf-virnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tf-nwsecgrp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "db-nsg",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f9a92d15-34b7-4665-b1d1-39e1a39c1d15/resourceGroups/staging-grp/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "location": "eastasia",
            "name": "db-nsg",
            "resource_group_name": "staging-grp",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.general_module.azurerm_resource_group.tf-resourcegrp",
            "module.networking_module.azurerm_virtual_network.tf-virnet"
          ]
        },
        {
          "index_key": "web-nsg",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f9a92d15-34b7-4665-b1d1-39e1a39c1d15/resourceGroups/staging-grp/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "location": "eastasia",
            "name": "web-nsg",
            "resource_group_name": "staging-grp",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.general_module.azurerm_resource_group.tf-resourcegrp",
            "module.networking_module.azurerm_virtual_network.tf-virnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tf-netsecrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/f9a92d15-34b7-4665-b1d1-39e1a39c1d15/resourceGroups/staging-grp/providers/Microsoft.Network/networkSecurityGroups/web-nsg/securityRules/AllowRDP",
            "name": "AllowRDP",
            "network_security_group_name": "web-nsg",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "staging-grp",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.general_module.azurerm_resource_group.tf-resourcegrp",
            "module.networking_module.azurerm_network_security_group.tf-nwsecgrp",
            "module.networking_module.azurerm_virtual_network.tf-virnet"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/f9a92d15-34b7-4665-b1d1-39e1a39c1d15/resourceGroups/staging-grp/providers/Microsoft.Network/networkSecurityGroups/web-nsg/securityRules/AllowSSH",
            "name": "AllowSSH",
            "network_security_group_name": "web-nsg",
            "priority": 201,
            "protocol": "Tcp",
            "resource_group_name": "staging-grp",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.general_module.azurerm_resource_group.tf-resourcegrp",
            "module.networking_module.azurerm_network_security_group.tf-nwsecgrp",
            "module.networking_module.azurerm_virtual_network.tf-virnet"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/f9a92d15-34b7-4665-b1d1-39e1a39c1d15/resourceGroups/staging-grp/providers/Microsoft.Network/networkSecurityGroups/web-nsg/securityRules/AllowHTTP",
            "name": "AllowHTTP",
            "network_security_group_name": "web-nsg",
            "priority": 202,
            "protocol": "Tcp",
            "resource_group_name": "staging-grp",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.general_module.azurerm_resource_group.tf-resourcegrp",
            "module.networking_module.azurerm_network_security_group.tf-nwsecgrp",
            "module.networking_module.azurerm_virtual_network.tf-virnet"
          ]
        },
        {
          "index_key": "4",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8172",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/f9a92d15-34b7-4665-b1d1-39e1a39c1d15/resourceGroups/staging-grp/providers/Microsoft.Network/networkSecurityGroups/web-nsg/securityRules/AllowPublicApplicationfromVS",
            "name": "AllowPublicApplicationfromVS",
            "network_security_group_name": "web-nsg",
            "priority": 203,
            "protocol": "Tcp",
            "resource_group_name": "staging-grp",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.general_module.azurerm_resource_group.tf-resourcegrp",
            "module.networking_module.azurerm_network_security_group.tf-nwsecgrp",
            "module.networking_module.azurerm_virtual_network.tf-virnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "tf-baspubip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/f9a92d15-34b7-4665-b1d1-39e1a39c1d15/resourceGroups/staging-grp/providers/Microsoft.Network/publicIPAddresses/tfbaspubip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.205.117.187",
            "ip_version": "IPv4",
            "location": "eastasia",
            "name": "tfbaspubip",
            "resource_group_name": "staging-grp",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.general_module.azurerm_resource_group.tf-resourcegrp"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tf-bassub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.10.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f9a92d15-34b7-4665-b1d1-39e1a39c1d15/resourceGroups/staging-grp/providers/Microsoft.Network/virtualNetworks/staging-network/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "resource_group_name": "staging-grp",
            "virtual_network_name": "staging-network"
          },
          "dependencies": [
            "module.general_module.azurerm_resource_group.tf-resourcegrp",
            "module.networking_module.azurerm_virtual_network.tf-virnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tf-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "db-subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f9a92d15-34b7-4665-b1d1-39e1a39c1d15/resourceGroups/staging-grp/providers/Microsoft.Network/virtualNetworks/staging-network/subnets/db-subnet",
            "name": "db-subnet",
            "resource_group_name": "staging-grp",
            "virtual_network_name": "staging-network"
          },
          "dependencies": [
            "module.general_module.azurerm_resource_group.tf-resourcegrp",
            "module.networking_module.azurerm_virtual_network.tf-virnet"
          ]
        },
        {
          "index_key": "web-subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f9a92d15-34b7-4665-b1d1-39e1a39c1d15/resourceGroups/staging-grp/providers/Microsoft.Network/virtualNetworks/staging-network/subnets/web-subnet",
            "name": "web-subnet",
            "resource_group_name": "staging-grp",
            "virtual_network_name": "staging-network"
          },
          "dependencies": [
            "module.general_module.azurerm_resource_group.tf-resourcegrp",
            "module.networking_module.azurerm_virtual_network.tf-virnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "tf-nwsecgrpass",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "db-nsg",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f9a92d15-34b7-4665-b1d1-39e1a39c1d15/resourceGroups/staging-grp/providers/Microsoft.Network/virtualNetworks/staging-network/subnets/db-subnet",
            "network_security_group_id": "/subscriptions/f9a92d15-34b7-4665-b1d1-39e1a39c1d15/resourceGroups/staging-grp/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "subnet_id": "/subscriptions/f9a92d15-34b7-4665-b1d1-39e1a39c1d15/resourceGroups/staging-grp/providers/Microsoft.Network/virtualNetworks/staging-network/subnets/db-subnet"
          },
          "dependencies": [
            "module.general_module.azurerm_resource_group.tf-resourcegrp",
            "module.networking_module.azurerm_network_security_group.tf-nwsecgrp",
            "module.networking_module.azurerm_subnet.tf-sub",
            "module.networking_module.azurerm_virtual_network.tf-virnet"
          ]
        },
        {
          "index_key": "web-nsg",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f9a92d15-34b7-4665-b1d1-39e1a39c1d15/resourceGroups/staging-grp/providers/Microsoft.Network/virtualNetworks/staging-network/subnets/web-subnet",
            "network_security_group_id": "/subscriptions/f9a92d15-34b7-4665-b1d1-39e1a39c1d15/resourceGroups/staging-grp/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "subnet_id": "/subscriptions/f9a92d15-34b7-4665-b1d1-39e1a39c1d15/resourceGroups/staging-grp/providers/Microsoft.Network/virtualNetworks/staging-network/subnets/web-subnet"
          },
          "dependencies": [
            "module.general_module.azurerm_resource_group.tf-resourcegrp",
            "module.networking_module.azurerm_network_security_group.tf-nwsecgrp",
            "module.networking_module.azurerm_subnet.tf-sub",
            "module.networking_module.azurerm_virtual_network.tf-virnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "tf-virnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f9a454b4-aaf9-4059-8977-cefeb2f409fb",
            "id": "/subscriptions/f9a92d15-34b7-4665-b1d1-39e1a39c1d15/resourceGroups/staging-grp/providers/Microsoft.Network/virtualNetworks/staging-network",
            "location": "eastasia",
            "name": "staging-network",
            "resource_group_name": "staging-grp"
          },
          "dependencies": [
            "module.general_module.azurerm_resource_group.tf-resourcegrp"
          ]
        }
      ]
    }
  ]
}